// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerDangerZone.vue Should display a warning message and an active delete button if pending cancelation 1`] = `
<div class="v-sheet v-sheet--outlined theme--light rounded error">
  <div class="elevation-0 v-card v-sheet theme--light">
    <!---->
    <div class="v-card__text font-weight-medium error--text">
      <div class="row">
        Deleting the explorer is not revertible.
        Your workspace &amp; its data will still be here and accessible with your private explorer.
        If you'd like to clear workspace data, go in the "Settings" tab, and use the "Reset Workspace" button.
      </div>
      <div class="row mt-2 pb-1">
        <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--has-bg theme--light v-size--default error"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i>Delete Explorer</span></button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExplorerDangerZone.vue Should have an active button if active subscription & billing disabled 1`] = `
<div class="v-sheet v-sheet--outlined theme--light rounded error">
  <div class="elevation-0 v-card v-sheet theme--light">
    <!---->
    <div class="v-card__text font-weight-medium error--text">
      <div class="row">
        You can't delete an explorer that has an active subscription. Please cancel it first.
      </div>
      <div class="row mt-2 pb-1">
        <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--has-bg theme--light v-size--default error"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i>Delete Explorer</span></button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExplorerDangerZone.vue Should have an inactive button if active subscription 1`] = `
<div class="v-sheet v-sheet--outlined theme--light rounded error">
  <div class="elevation-0 v-card v-sheet theme--light">
    <!---->
    <div class="v-card__text font-weight-medium error--text">
      <div class="row">
        You can't delete an explorer that has an active subscription. Please cancel it first.
      </div>
      <div class="row mt-2 pb-1">
        <div class="spacer"></div> <button type="button" disabled="disabled" class="mt-2 v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i>Delete Explorer</span></button>
      </div>
    </div>
  </div>
</div>
`;
